--- a/FotoWeb/Web.config
+++ b/FotoWeb/Web.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <appSettings/>
-  <connectionStrings/>
+	<configSections>
+		<section name="spark" type="Spark.Configuration.SparkSectionHandler, Spark"/>
+	</configSections>
+	<appSettings/>
+	<connectionStrings/>
+	<spark>
+    
+  </spark>
   <system.web>
     <compilation debug="true">
       <assemblies>
